--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/images/download.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/download.ico" type="image/x-icon">
     <title>Buy and Sell Online Businesses & Websites - Empire Flippers</title>
 </head>
 
@@ -13,12 +13,12 @@
     <header>
         <nav>
             <div class="nav_left">
-                <img src="/images/ef-logo-white2x.png" alt="Error" id="empire">
+                <img src="./images/ef-logo-white2x.png" alt="Error" id="empire">
                 <ul>
                     <li id="mar">Marketplace</li>
                     <li id="sell">For Sellers</li>
                     <li id="com">Company
-                        <img src="/imagesicons8-triangle-24.png" alt="" width="10px">
+                        <img src="./imagesicons8-triangle-24.png" alt="" width="10px">
                         <div class="company_submenu">
                             <div class="submenu">
                                 <ul>
@@ -31,7 +31,7 @@
                         </div>
                     </li>
                     <li id="res">Resources
-                        <img src="/images/icons8-triangle-24.png" alt="" width="10px">
+                        <img src="./images/icons8-triangle-24.png" alt="" width="10px">
                         <div class="res_submenu">
                             <div class="submenu">
                                 <ul>
@@ -47,12 +47,12 @@
             </div>
             <div class="nav_right">
                 <div class="login">
-                    <img src="/images/icons8-password-48.png" alt="" width="40px" height="35px">
+                    <img src="./images/icons8-password-48.png" alt="" width="40px" height="35px">
                     Login
                 </div>
                 <div class="get_started">
                     Get Started
-                    <img src="/images/icons8-right-arrow-50.png" alt="Error" width="25px
+                    <img src="./images/icons8-right-arrow-50.png" alt="Error" width="25px
                     ">
                 </div>
             </div>
@@ -74,11 +74,11 @@
                                     <button>
                                         Get Started For Free
                                     </button>
-                                    <img src="/images/icons8-right-arrow-50.png" alt="" width="25px">
+                                    <img src="./images/icons8-right-arrow-50.png" alt="" width="25px">
                                 </a>
                             </li>
                             <li>Learn More
-                                <img src="/images/icons8-right-arrow-50.png" alt="" width="25px">
+                                <img src="./images/icons8-right-arrow-50.png" alt="" width="25px">
                             </li>
                         </ul>
                     </div>
@@ -86,19 +86,19 @@
                 <div class="seen">
                     <p>As Seen On</p>
                     <div class="seenIMG">
-                        <img src="/images/newyork.svg" alt="Error">
-                        <img src="/images/inc.svg" alt="Error">
-                        <img src="/images/forbes.svg" alt="Error">
-                        <img src="/images/huff.svg" alt="Error">
-                        <img src="/images/moz.svg" alt="Error">
+                        <img src="./images/newyork.svg" alt="Error">
+                        <img src="./images/inc.svg" alt="Error">
+                        <img src="./images/forbes.svg" alt="Error">
+                        <img src="./images/huff.svg" alt="Error">
+                        <img src="./images/moz.svg" alt="Error">
                     </div>
                 </div>
                 <div class="into">
-                    <img src="/images/macbook.png" alt="Error">
+                    <img src="./images/macbook.png" alt="Error">
                 </div>
             </div>
             <div class="first_right">
-                <img src="/images/macbook.png" alt="Error">
+                <img src="./images/macbook.png" alt="Error">
             </div>
         </section>
         <section class="second">
@@ -169,42 +169,42 @@
             </div>
             <div class="container">
                 <div class="box">
-                    <img src="/images/amazon-associates.svg" alt="Error">
+                    <img src="./images/amazon-associates.svg" alt="Error">
                     <h4>Amazon Associates</h4>
                     <p>28 Listings</p>
                 </div>
                 <div class="box">
-                    <img src="/images/amazon-fba.svg" alt="Error">
+                    <img src="./images/amazon-fba.svg" alt="Error">
                     <h4>Amazon FBA</h4>
                     <p>32 Listings</p>
                 </div>
                 <div class="box">
-                    <img src="/images/amazon-fbm.svg" alt="Error">
+                    <img src="./images/amazon-fbm.svg" alt="Error">
                     <h4>Amazon FBM</h4>
                     <p>2 Listings</p>
                 </div>
                 <div class="box">
-                    <img src="/images/amazon-kdp.svg" alt="Error">
+                    <img src="./images/amazon-kdp.svg" alt="Error">
                     <h4>Amazon KDP</h4>
                     <p>9 Listings</p>
                 </div>
                 <div class="box">
-                    <img src="/images/amazon-merch.svg" alt="Error">
+                    <img src="./images/amazon-merch.svg" alt="Error">
                     <h4>Amazon Merchant</h4>
                     <p>3 Listings</p>
                 </div>
                 <div class="box">
-                    <img src="/images/display-advertising.svg" alt="Error">
+                    <img src="./images/display-advertising.svg" alt="Error">
                     <h4>Display Advertising</h4>
                     <p>42 Listings</p>
                 </div>
                 <div class="box">
-                    <img src="/images/dropshipping.svg" alt="Error">
+                    <img src="./images/dropshipping.svg" alt="Error">
                     <h4>DropShipping</h4>
                     <p>3 Listings</p>
                 </div>
                 <div class="box">
-                    <img src="/images/e-commerce.svg" alt="Error">
+                    <img src="./images/e-commerce.svg" alt="Error">
                     <h4>eCommerce</h4>
                     <p>18 Listings</p>
                 </div>
@@ -213,7 +213,7 @@
         <section class="seventh">
             <div class="seventh_top">
                 <div class="seventh_top_left">
-                    <img src="/images/Why-choose-us.jpg" alt="">
+                    <img src="./images/Why-choose-us.jpg" alt="">
                 </div>
                 <div class="seventh_top_right">
                     <p>
@@ -230,7 +230,7 @@
             </div>
             <div class="seventh_bottom">
                 <div class="seventh_bottom_box">
-                    <img src="/images/icons8-tick-64.png" alt="Error" width="80px">
+                    <img src="./images/icons8-tick-64.png" alt="Error" width="80px">
                     <h4>
                         Legitimate Businesses
                     </h4>
@@ -240,7 +240,7 @@
                     </p>
                 </div>
                 <div class="seventh_bottom_box">
-                    <img src="/images/icons8-tick-64.png" alt="Error" width="80px">
+                    <img src="./images/icons8-tick-64.png" alt="Error" width="80px">
                     <h4>
                         Real Data
                     </h4>
@@ -250,7 +250,7 @@
                     </p>
                 </div>
                 <div class="seventh_bottom_box">
-                    <img src="/images/icons8-tick-64.png" alt="Error" width="80px">
+                    <img src="./images/icons8-tick-64.png" alt="Error" width="80px">
                     <h4>
                         Done For You Migrations
                     </h4>
@@ -303,14 +303,14 @@
         <div class="footer_middle">
             <div class="one">
                 <ul>
-                    <li><img src="/images/ef-logo-white2x.png" alt=""></li>
+                    <li><img src="./images/ef-logo-white2x.png" alt=""></li>
                     <li>
                         <p>Empire Flippers has helped people buy and sell over $450+ million worth of online businesses.
                         </p>
                     </li>
-                    <li><img src="/images/Inc-500.png" alt=""></li>
-                    <li><img src="/images/IBBA-Logo.png" alt=""></li>
-                    <li><img src="/images/Bitcoin.png" alt=""></li>
+                    <li><img src="./images/Inc-500.png" alt=""></li>
+                    <li><img src="./images/IBBA-Logo.png" alt=""></li>
+                    <li><img src="./images/Bitcoin.png" alt=""></li>
                 </ul>
             </div>
             <div class="two">
@@ -359,10 +359,10 @@
                 <hr>
                 <p id="social">Social</p>
                 <div class="social">
-                    <img src="/images/icons8-facebook-50.png" alt="Error" style="background-color: white; border-radius: 50%;">
-                    <img src="/images/icons8-twitter-48.png" alt="Error">
-                    <img src="/images/icons8-youtube-48.png" alt="Error">
-                    <img src="/images/icons8-instagram-50.png" alt="Error"
+                    <img src="./images/icons8-facebook-50.png" alt="Error" style="background-color: white; border-radius: 50%;">
+                    <img src="./images/icons8-twitter-48.png" alt="Error">
+                    <img src="./images/icons8-youtube-48.png" alt="Error">
+                    <img src="./images/icons8-instagram-50.png" alt="Error"
                         style="background-color: white; border-radius: 25%;">
                 </div>
             </div>
