--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="items">
                         <ul>
                             <li>
-                                <a href="/get_started_for_free.html" style="text-decoration: none;color: white;">
+                                <a href="./get_started_for_free.html" style="text-decoration: none;color: white;">
                                     <button>
                                         Get Started For Free
                                     </button>
