--- a/get_started_for_free.html
+++ b/get_started_for_free.html
@@ -5,28 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/get_started_for_free_style.css">
-    <link rel="shortcut icon" href="/images/download.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/download.ico" type="image/x-icon">
     <title>Register | Empire Flippers</title>
 </head>
 
 <body>
     <main>
         <div class="message">
-            <img src="/images/icons8-message-24.png" alt="Error">
+            <img src="./images/icons8-message-24.png" alt="Error">
         </div>
         <section class="login_senario">
             <div class="left">
-                <img src="/images/header-logo.56057992.png" alt="Error" width="200px">
+                <img src="./images/header-logo.56057992.png" alt="Error" width="200px">
                 <p style="font-size: 50px;font-weight: bold;">Register Account</p>
                 <p style="color: gray;">Choose how you'd like to sign up</p>
                 <div class="login_options">
                     <div class="google_login">
-                        <img src="/images/icons8-google-48.png" alt="Error" width="30pc
+                        <img src="./images/icons8-google-48.png" alt="Error" width="30pc
                         ">
                         <p>Sign Up with Google</p>
                     </div>
                     <div class="mail_login">
-                        <img src="/images/icons8-mail-25.png" alt="Error" width="30px">
+                        <img src="./images/icons8-mail-25.png" alt="Error" width="30px">
                         <p>Sign Up with Email</p>
                     </div>
                 </div>
@@ -41,19 +41,19 @@
                     <div class="box1">
                         <ul>
                             <li>
-                                <img src="/images/icons8-tick-64.png" alt="Error" width="30px">
+                                <img src="./images/icons8-tick-64.png" alt="Error" width="30px">
                                 Find Vetted, profitable online businessess
                             </li>
                             <li>
-                                <img src="/images/icons8-tick-64.png" alt="Error" width="30px">
+                                <img src="./images/icons8-tick-64.png" alt="Error" width="30px">
                                 Advanced marketplace search filters
                             </li>
                             <li>
-                                <img src="/images/icons8-tick-64.png" alt="Error" width="30px">
+                                <img src="./images/icons8-tick-64.png" alt="Error" width="30px">
                                 Add listings to your watchlist
                             </li>
                             <li>
-                                <img src="/images/icons8-tick-64.png" alt="Error" width="30px">
+                                <img src="./images/icons8-tick-64.png" alt="Error" width="30px">
                                 Save your searches to save time
                             </li>
                         </ul>
@@ -61,19 +61,19 @@
                     <div class="box2">
                         <ul>
                             <li>
-                                <img src="/images/icons8-tick-64 (1).png" alt="Error" width="30px">
+                                <img src="./images/icons8-tick-64 (1).png" alt="Error" width="30px">
                                 Get a free valuation of your business
                             </li>
                             <li>
-                                <img src="/images/icons8-tick-64 (1).png" alt="Error" width="30px">
+                                <img src="./images/icons8-tick-64 (1).png" alt="Error" width="30px">
                                 Sell your site on our marketplace
                             </li>
                             <li>
-                                <img src="/images/icons8-tick-64 (1).png" alt="Error" width="30px">
+                                <img src="./images/icons8-tick-64 (1).png" alt="Error" width="30px">
                                 Dashboard to monitor everything
                             </li>
                             <li>
-                                <img src="/images/icons8-tick-64 (1).png" alt="Error" width="30px">
+                                <img src="./images/icons8-tick-64 (1).png" alt="Error" width="30px">
                                 Access to useful resources section
                             </li>
                         </ul>
@@ -81,21 +81,21 @@
                 </div>
                 <div class="box3">
                     <div class="cart">
-                        <img src="/images/icons8-cart-64.png" alt="Error">
+                        <img src="./images/icons8-cart-64.png" alt="Error">
                         <ul class="ful">
                             <li>$446,587,743</li>
                             <li>Sales overall</li>
                         </ul>
                     </div>
                     <div class="credit">
-                        <img src="/images/icons8-credit-card-64.png" alt="">
+                        <img src="./images/icons8-credit-card-64.png" alt="">
                         <ul class="sul">
                             <li>2,218</li>
                             <li># of Listings Sold</li>
                         </ul>
                     </div>
                     <div class="web">
-                        <img src="/images/icons8-web-50.png" alt="">
+                        <img src="./images/icons8-web-50.png" alt="">
                         <ul class="tul">
                             <li>118</li>
                             <li>Current Listings</li>
@@ -108,7 +108,7 @@
     <footer>
         <div class="foot-left">
             <ul>
-                <li><img src="/images/download.ico" alt="Error" width="30px"></li>
+                <li><img src="./images/download.ico" alt="Error" width="30px"></li>
                 <li>© 2019 - 2023 Empire Flippers, LLC</li>
             </ul>
         </div>
