--- a/get_started_for_free.html
+++ b/get_started_for_free.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/get_started_for_free_style.css">
+    <link rel="stylesheet" href="./get_started_for_free_style.css">
     <link rel="shortcut icon" href="./images/download.ico" type="image/x-icon">
     <title>Register | Empire Flippers</title>
 </head>
