--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 <body>
     <header>
         <nav>
+            <div class="bar_3">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
             <div class="nav_left">
                 <img src="./images/ef-logo-white2x.png" alt="Error" id="empire">
                 <ul>
@@ -55,6 +60,9 @@
                     <img src="./images/icons8-right-arrow-50.png" alt="Error" width="25px
                     ">
                 </div>
+            </div>
+            <div class="bar_3_2">
+                <div></div>
             </div>
         </nav>
     </header>
