--- a/get_started_for_free.html
+++ b/get_started_for_free.html
@@ -17,7 +17,7 @@
         <section class="login_senario">
             <div class="left">
                 <img src="./images/header-logo.56057992.png" alt="Error" width="200px">
-                <p style="font-size: 50px;font-weight: bold;">Register Account</p>
+                <p style="font-size: 50px;font-weight: bold;text-align: center;">Register Account</p>
                 <p style="color: gray;">Choose how you'd like to sign up</p>
                 <div class="login_options">
                     <div class="google_login">
